--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install neccessary packages 
+        run: sudo apt install python3-dev python3-pip
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
