--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,10 +24,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Install neccessary packages 
-        run: sudo apt install python3-dev python3-pip
+      
+      - name: Install OpenStack Client
+        run: |
+          sudo apt install python3-dev python3-pip
+          sudo pip3 install --upgrade pip
+          sudo pip3 install python-openstackclient
+          
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
