--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,17 @@ jobs:
           sudo pip3 install --upgrade pip
           sudo pip3 install python-openstackclient
           
+      - shell: bash
+        env:
+          OS_USERNAME: ${{ secrets.OS_USERNAME }}
+          OS_PROJECT_NAME: ${{ secrets.OS_PROJECT_NAME }}
+          OS_PASSWORD: ${{ secrets.OS_PASSWORD }}
+          OS_AUTH_URL: ${{ secrets.OS_AUTH_URL }}
+          OS_PROJECT_DOMAIN_ID: ${{ secrets.OS_PROJECT_DOMAIN_ID }}
+          OS_USER_DOMAIN_NAME: ${{ secrets.OS_USER_DOMAIN_NAME }}                              
+        run: |
+          openstack token issue         
+          
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
