--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,13 @@ jobs:
           OS_PROJECT_DOMAIN_ID: ${{ secrets.OS_PROJECT_DOMAIN_ID }}
           OS_USER_DOMAIN_NAME: ${{ secrets.OS_USER_DOMAIN_NAME }}                              
         run: |
-          openstack token issue  
+          ssh-keygen -t rsa -N ''
+          openstack keypair create --public-key ~/.ssh/id_rsa.pub mykey
+          openstack server create --image ${{ secrets.CRC_SNAPSHOT_NAME }} --flavor ${{ secrets.FLAVOR }} --network ${{ secrets.PRIVATE_NETWORK }} --security-group ${{ secrets.SECURITY_GROUP }} test_crc_instance_github_1 --wait
+          floating_ip=$(openstack floating ip create ${{ secrets.FLOATING_NETWORK }} -c floating_ip_address -f value)
+          openstack server add floating ip test_crc_instance_github_1 $floating_ip
+          ssh fedora@$floating_ip hostname
+          
           
 
       # Runs a set of commands using the runners shell
