--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,8 @@ jobs:
           sudo pip3 install --upgrade pip
           sudo pip3 install python-openstackclient
           
-      - shell: bash
+      - name: Create an OpenStack Instance
+        shell: bash
         env:
           OS_USERNAME: ${{ secrets.OS_USERNAME }}
           OS_PROJECT_NAME: ${{ secrets.OS_PROJECT_NAME }}
@@ -42,13 +43,13 @@ jobs:
         run: |
           ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa <<<y >/dev/null 2>&1
           openstack keypair create --public-key ~/.ssh/id_rsa.pub mykey
-          openstack server create --image ${{ secrets.CRC_SNAPSHOT_NAME }} --flavor ${{ secrets.FLAVOR }} --network ${{ secrets.PRIVATE_NETWORK }} --security-group ${{ secrets.SECURITY_GROUP }} test_crc_instance_github_1 --wait
+          openstack server create --image ${{ secrets.CRC_SNAPSHOT_NAME }} --flavor ${{ secrets.FLAVOR }} --network ${{ secrets.PRIVATE_NETWORK }} --security-group ${{ secrets.SECURITY_GROUP }} --key-name mykey test_crc_instance_github_1 --wait
           floating_ip=$(openstack floating ip create ${{ secrets.FLOATING_NETWORK }} -c floating_ip_address -f value)
           openstack server add floating ip test_crc_instance_github_1 $floating_ip
+          sleep 20
           ssh fedora@$floating_ip hostname
-          
-          
-
+        
+        
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
