--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,6 +49,7 @@ jobs:
           floating_ip=$(openstack floating ip create ${{ secrets.FLOATING_NETWORK }} -c floating_ip_address -f value)
           openstack server add floating ip test_crc_instance_github_1 $floating_ip
           sleep 60
+          ssh-keyscan -t rsa $floating_ip  >> ~/.ssh/known_hosts
           ssh -i ~/.ssh/id_rsa fedora@$floating_ip hostname
         
         
