--- a/install_operator.yaml
+++ b/install_operator.yaml
@@ -8,7 +8,7 @@
       - name: Install operator
         shell: |
           eval $(crc oc-env)
-          oc login -u kubeadmin https://api.crc.testing:6443
+          oc login -u kubeadmin -p 12345678 https://api.crc.testing:6443
           cd $HOME/install_yamls
           make crc_storage
           make mariadb
