--- a/install_operator.yaml
+++ b/install_operator.yaml
@@ -14,7 +14,7 @@
           make mariadb
           sleep 30 # wait 30 seconds so that operator install completes successfully, will replace with better check
           # KEYSTONE_IMG=quay.io/mschuppe/keystone-operator-index:v0.0.34 KEYSTONE_REPO=https://github.com/stuggi/keystone-operator.git KEYSTONE_BRANCH=rework make keystone
-          KEYSTONE_IMG=quay.io/sandyada/keystone-operator-index:v0.0.12 make keystone
+          make keystone
           sleep 30 # wait 30 seconds so that operator install completes successfully, will replace with better check
           make mariadb_deploy
           sleep 60 # wait 60 seconds so that mariadb service install successfully, will replace with better checks
