--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,8 +42,6 @@ jobs:
           OS_USER_DOMAIN_NAME: ${{ secrets.OS_USER_DOMAIN_NAME }}                              
         run: |
           ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa <<<y >/dev/null 2>&1
-          echo "after"
-          ls ~/.ssh/id_*
           openstack keypair create --public-key ~/.ssh/id_rsa.pub mykey >/dev/null
           openstack server create --image ${{ secrets.CRC_SNAPSHOT_NAME }} --flavor ${{ secrets.FLAVOR }} --network ${{ secrets.PRIVATE_NETWORK }} --security-group ${{ secrets.SECURITY_GROUP }} --key-name mykey test_crc_instance_github_1 --wait >/dev/null
           floating_ip=$(openstack floating ip create ${{ secrets.FLOATING_NETWORK }} -c floating_ip_address -f value)
@@ -55,7 +53,6 @@ jobs:
         
         
       # Runs a set of commands using the runners shell
-      - name: Start CRC and Install Operators
+      - name: Install Operators
         run: |
-          ls ${{ github.workspace }}
-          ansible-playbook -i -vv inventory ${{ github.workspace }}/install_operator.yaml
+          ansible-playbook -i inventory ${{ github.workspace }}/install_operator.yaml -vv
