--- a/install_operator.yaml
+++ b/install_operator.yaml
@@ -2,6 +2,10 @@
   - name: "Start CRC Node and install the operator"
     hosts: all
     tasks:
+      - name: Workaround for hanging ssh
+        shell: |
+          echo "ServerAliveInterval 20" > ~/.ssh/config
+        
       - name: Start CRC node
         shell: |
           crc start --log-level debug &>> $HOME/crc_start.log
