--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,6 +50,8 @@ jobs:
           ssh-keyscan -t rsa $floating_ip  >> ~/.ssh/known_hosts
           scp ${{ github.workspace }}/install_operator.sh fedora@$floating_ip:~
           echo "$floating_ip ansible_user=fedora" > inventory
+          ssh fedora@$floating_ip echo "ServerAliveInterval 20" >> ~/.ssh/config
+          ssh fedora@$floating_ip echo "ServerAliveCountMax 180" >> ~/.ssh/config
         
         
       # Runs a set of commands using the runners shell
