--- a/install_operator.yaml
+++ b/install_operator.yaml
@@ -4,6 +4,7 @@
     tasks:     
       - name: Start CRC node
         shell: |
+          set -ex
           crc start --log-level debug &>> $HOME/crc_start.log
           sleep 30
           echo "======crc start complete======" &>> $HOME/crc_start.log
