--- a/install_operator.yaml
+++ b/install_operator.yaml
@@ -6,7 +6,6 @@
         shell: |
           set -ex
           crc start --log-level debug &>> $HOME/crc_start.log
-          sleep 30
           echo "======crc start complete======" &>> $HOME/crc_start.log
           
       - name: Pre-test to check if oc commands are working
@@ -14,7 +13,10 @@
           eval $(crc oc-env)
           oc login -u kubeadmin -p 12345678 https://api.crc.testing:6443
           oc whoami
-    
+        register: task_register_var
+        until: task_register_var is not failed
+        retries: 20
+        
       - name: Install operator
         shell: |
           bash $HOME/install_operator.sh &>> $HOME/install_operator.log
