--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -42,10 +42,10 @@ jobs:
           OS_USER_DOMAIN_NAME: ${{ secrets.OS_USER_DOMAIN_NAME }}                              
         run: |
           ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa <<<y >/dev/null 2>&1
-          openstack keypair create --public-key ~/.ssh/id_rsa.pub mykey >/dev/null
-          openstack server create --image ${{ secrets.CRC_SNAPSHOT_NAME }} --flavor ${{ secrets.FLAVOR }} --network ${{ secrets.PRIVATE_NETWORK }} --security-group ${{ secrets.SECURITY_GROUP }} --key-name mykey test_crc_instance_github_1 --wait >/dev/null
+          openstack keypair create --public-key ~/.ssh/id_rsa.pub key_${GITHUB_SHA:0:7} >/dev/null
+          openstack server create --image ${{ secrets.CRC_SNAPSHOT_NAME }} --flavor ${{ secrets.FLAVOR }} --network ${{ secrets.PRIVATE_NETWORK }} --security-group ${{ secrets.SECURITY_GROUP }} --key-name key_${GITHUB_SHA:0:7} github_instance_${GITHUB_SHA:0:7} --wait >/dev/null
           floating_ip=$(openstack floating ip create ${{ secrets.FLOATING_NETWORK }} -c floating_ip_address -f value)
-          openstack server add floating ip test_crc_instance_github_1 $floating_ip
+          openstack server add floating ip github_instance_${GITHUB_SHA:0:7} $floating_ip
           sleep 20
           ssh-keyscan -t rsa $floating_ip  >> ~/.ssh/known_hosts
           scp ${{ github.workspace }}/install_operator.sh fedora@$floating_ip:~
@@ -53,6 +53,9 @@ jobs:
           ssh fedora@$floating_ip echo "ServerAliveInterval 20" >> ~/.ssh/config
           ssh fedora@$floating_ip echo "ServerAliveCountMax 180" >> ~/.ssh/config
         
+      - name: Start CRC 
+        run: |
+          ansible-playbook -i inventory ${{ github.workspace }}/start_crc.yaml -vv
         
       # Runs a set of commands using the runners shell
       - name: Install Operators
