--- a/install_operator.yaml
+++ b/install_operator.yaml
@@ -2,27 +2,13 @@
   - name: "Start CRC Node and install the operator"
     hosts: all
     tasks:     
-      - name: Start CRC node
-        shell: |
-          set -ex
-          crc start --log-level debug &>> $HOME/crc_start.log
-          echo "======crc start complete======" &>> $HOME/crc_start.log
-          
-      - name: Pre-test to check if oc commands are working
-        shell: |
-          eval $(crc oc-env)
-          oc login -u kubeadmin -p 12345678 https://api.crc.testing:6443
-          oc whoami
-        register: task_register_var
-        until: task_register_var is not failed
-        retries: 20
-        
       - name: Install operator
         shell: |
           bash $HOME/install_operator.sh &>> $HOME/install_operator.log
 
       - name: Post tests
         shell: |
+          set -ex
           export OS_PROJECT_NAME=admin
           export OS_USERNAME=admin
           export OS_PASSWORD=12345678
@@ -30,3 +16,9 @@
           export OS_USER_DOMAIN_NAME=Default
           export OS_PROJECT_DOMAIN_NAME=Default
           openstack token issue
+        register: task_register_var
+        until: task_register_var is not failed
+        retries: 10
+        
+      - debug: 
+          msg: "{{ task_register_var }}"        
