--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -48,14 +48,14 @@ jobs:
           openstack server add floating ip github_instance_${GITHUB_SHA:0:7} $floating_ip
           sleep 20
           ssh-keyscan -t rsa $floating_ip  >> ~/.ssh/known_hosts
-          scp ${{ github.workspace }}/ci/install_operator.sh fedora@$floating_ip:~
+          scp ${{ github.workspace }}/ci/*.sh fedora@$floating_ip:~
           echo "$floating_ip ansible_user=fedora" > inventory
           ssh fedora@$floating_ip echo "ServerAliveInterval 20" >> ~/.ssh/config
           ssh fedora@$floating_ip echo "ServerAliveCountMax 180" >> ~/.ssh/config
         
       - name: Start CRC 
         run: |
-          ansible-playbook -i inventory ${{ github.workspace }}/start_crc.yaml -vv
+          ansible-playbook -i inventory ${{ github.workspace }}/ci/start_crc.yaml -vv
         
       # Runs a set of commands using the runners shell
       - name: Install Operators
