--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,7 +57,10 @@ jobs:
         run: |
           ansible-playbook -i inventory ${{ github.workspace }}/ci/start_crc.yaml -vv
         
-      # Runs a set of commands using the runners shell
+      - name: Create Operator Image
+        run: |
+          ansible-playbook -i inventory ${{ github.workspace }}/ci/install_operator.yaml -vv
+
       - name: Install Operators
         run: |
           ansible-playbook -i inventory ${{ github.workspace }}/ci/install_operator.yaml -vv
