Correct the yaml for build operator

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,9 +57,9 @@ jobs:
         run: |
           ansible-playbook -i inventory ${{ github.workspace }}/ci/start_crc.yaml -vv
         
-      - name: Create Operator Image
+      - name: Build Operator Image
         run: |
-          ansible-playbook -i inventory ${{ github.workspace }}/ci/install_operator.yaml -vv
+          ansible-playbook -i inventory ${{ github.workspace }}/ci/build_operator_image.yaml -vv
 
       - name: Install Operators
         run: |
