--- a/ci/build_operator_image.yaml
+++ b/ci/build_operator_image.yaml
@@ -1,5 +1,5 @@
 ---
-  - hosts: localhost
+  - hosts: all
     tasks:
       - name: Install required packages to build containers
         become: true
