--- a/ci/build_operator_image.yaml
+++ b/ci/build_operator_image.yaml
@@ -26,7 +26,7 @@
           
       - name: Create operator images
         shell: |
-          bash $HOME/build_operator_image.sh &> build_operator_image.log
+          bash $HOME/build_operator_image.sh &>> build_operator_image.log
         register: task_register_var
         until: task_register_var is not failed
         retries: 5
