--- a/.github/workflows/sno.yml
+++ b/.github/workflows/sno.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  pull_request:
+  push:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -70,4 +70,17 @@ jobs:
           timeout_minutes: 10
           max_attempts: 5    
           command: |
-            ansible-playbook ${{ github.workspace }}/ci/install_operator.yaml -vv
+            cd $HOME
+            rm -rf install_yamls
+            git clone https://github.com/openstack-k8s-operators/install_yamls.git
+            cd $HOME/install_yamls
+            make crc_storage
+            sleep 10
+            make mariadb
+            sleep 30
+            make keystone
+            sleep 30
+            make mariadb_deploy
+            sleep 60
+            make keystone_deploy
+            sleep 90
