--- a/.github/workflows/sno.yml
+++ b/.github/workflows/sno.yml
@@ -41,7 +41,7 @@ jobs:
           OS_USER_DOMAIN_NAME: ${{ secrets.OS_USER_DOMAIN_NAME }}                              
         run: |
           openstack stack create -t "${GITHUB_WORKSPACE}"/.github/sno_heat_stack.yaml sandeep_test_stack --wait
-          floating_ip=$(openstack stack output show sandeep-test-stack heat_server_public_ip -c output_value -f value)
+          floating_ip=$(openstack stack output show sandeep_test_stack heat_server_public_ip -c output_value -f value)
           echo "$floating_ip api.${{ secrets.SNO_DOMAIN_NAME }}" | sudo tee -a /etc/hosts > /dev/null
           echo "$floating_ip console-openshift-console.apps.${{ secrets.SNO_DOMAIN_NAME }}" | sudo tee -a /etc/hosts > /dev/null
           echo "$floating_ip integrated-oauth-server-openshift-authentication.apps.${{ secrets.SNO_DOMAIN_NAME }}" | sudo tee -a /etc/hosts > /dev/null
