--- a/.github/workflows/sno.yml
+++ b/.github/workflows/sno.yml
@@ -51,7 +51,9 @@ jobs:
           
       - name: Wait for 5 mins for cluster to get stable
         run: |
+          sudo cat /etc/hosts
           sleep 300
+          
         
       - name: Try to login as kubeadmin
         uses: nick-fields/retry@v2
