--- a/.github/workflows/sno.yml
+++ b/.github/workflows/sno.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
+  pull_request:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -71,21 +71,7 @@ jobs:
           max_attempts: 5
           shell: bash
           command: |
-            cd $HOME
-            rm -rf install_yamls
-            git clone https://github.com/openstack-k8s-operators/install_yamls.git
-            cd $HOME/install_yamls
-            make crc_storage
-            sleep 20
-            make mariadb
-            sleep 60
-            make keystone
-            sleep 60
-            make mariadb_deploy
-            sleep 60
-            make keystone_deploy
-            sleep 90
-            
+            bash "${GITHUB_WORKSPACE}"/.github/install_operator_with_hash.sh keystone-operator quay.io/sandyada e55e2c3a49f857041167493db7afd82b80dfdb6a
             
       - name: Post tests to confirm operators are working
         run: |
